[gd_scene load_steps=2 format=3 uid="uid://bop4g007gumea"]

[ext_resource type="Script" uid="uid://bf6wfy5lrak4c" path="res://src/header/ProgressIndicator.gd" id="1_4x5y"]

[node name="ProgressIndicator" type="Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 3
anchor_right = 0.39100003
anchor_bottom = 0.28500003
offset_right = -0.3840332
offset_bottom = -1.5258789e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4x5y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Progress"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VerbEndingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 30
text = "Ending: -er"

[node name="CurrentVerbLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 30
text = "current verb: Tener"

[node name="TotalErrorsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 30
text = "Total Errors: 0"

[node name="VerbsCompletedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Completed: 0/3"
